--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <title> Lançamento - Celular Voador </title>
 </head>
 
@@ -35,7 +35,7 @@
                 de ser um dispositivo que não precisará mais estar nas suas mãos para seu uso, este produto inovador
                 pode tirar fotos, gravar vídeos e áudios em lugares até então inalcansáveis. Você não precisa mais de
                 outra pessoa para tirar aquela foto incrível para o seu feed! </p>
-            <img class="imagem" src="Celular_voador.png" alt="Foto ilustrativa do Celular Voador">
+            <img class="imagem" src="src/img/Celular_voador.png" alt="Foto ilustrativa do Celular Voador">
         </section>
 
         <section id="especificacoes">
@@ -53,7 +53,7 @@
                         RAM: 8 GB <br>
                         Cor: Azul, Prata, Preto, Lilás </td>
                     <td class="celula_img"> <img class="imagem_descricao"
-                            src="Celular_voador2.png" alt="imagem do produto"> </td>
+                            src="src/img/Celular_voador2.png" alt="imagem do produto"> </td>
                 </tr>
                 <tr>
                     <td class="letra_grande"> <strong> Versão Básica </strong> </td>
@@ -62,7 +62,7 @@
                         Cor: Preto, Azul
                     </td>
                     <td class="celula_img"> <img class="imagem_descricao"
-                            src="Celular_voador3.png" alt="imagem do produto2">
+                            src="src/img/Celular_voador3.png" alt="imagem do produto2">
                     </td>
                 </tr>
             </table>
@@ -71,9 +71,9 @@
         <section>
             <h2> Galeria de Imagens </h2>
             <div id="galeria">
-                <img class="imagem" src="Celular_voador.png"
+                <img class="imagem" src="src/img/Celular_voador.png"
                     alt="Foto ilustrativa do Celular Voador">
-                <img class="imagem" src="Celular_voador2.png"
+                <img class="imagem" src="src/img/Celular_voador.png"
                     alt="Foto ilustrativa do Celular Voador">
             </div>
         </section>
