--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </aside>
 
     <footer>
-        <p> © 2025 [Nome da Sua Empresa Fictícia]. Todos os direitos reservados. </p>
+        <p> © 2025 JOAOTECH. Todos os direitos reservados. </p>
     </footer>
 </body>
 
