--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="MenuPrincipal">
                 <li> <a href="#hero"> O que é? </a> </li>
                 <li> <a href="#especificacoes"> Especificações </a> </li>
-                <li> <a href="#galeria"> Galera </a> </li>
+                <li> <a href="#galeria"> Galeria </a> </li>
                 <li> <a href="#comprar"> Comprar </a> </li>
             </ul>
         </nav>
